[package]
name = "sedol"
version = "0.1.0"
edition = "2021"
description = "A crate to validate SEDOLs"
repository = "https://github.com/truls-p/sedol"
readme = "README.md"
keywords = ["sedol","identifier", "finance", "equity", "stock"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[badges]
github = { repository = "truls-p/sedol" }
